--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                             </div>
                         </div>
                         <h5>Password & Security</h5>
-                        <p class="text-muted">Xend allws you to attach your personal password while sending your files or genrate one with our password generator.</p>
+                        <p class="text-muted">Xend allows you to attach your personal password while sending your files or genrate one with our password generator.</p>
                     </div>
                     <div class="col-md-6 box">
                         <div class="icon-box box-info">
