--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
                         <a class="nav-link page-scroll" href="#features">Features</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#xcloud">Xcloud</a>
+                        <a class="nav-link page-scroll" href="https://passwords-generator.netlify.app/">Password Generator</a>
                     </li>
                  
                     <li class="nav-item">
-                        <a class="nav-link page-scroll d-flex flex-row align-items-center text-primary" href="https://passwords-generator.netlify.app/">
+                        <a class="nav-link page-scroll d-flex flex-row align-items-center text-primary" href="">
                             <em data-feather="layout" width="18" height="18" class="mr-2"></em>
-                            Try Password Generator
+                            Try Xcloud
                         </a>
                     </li>
                 </ul>
@@ -54,7 +54,7 @@
         <div class="row vh-md-100">
             <div class="col-md-8 col-sm-10 col-12 mx-auto my-auto text-center">
                 <h1 class="heading-black text-capitalize">Quickly transfer files to friends with Xend</h1>
-                <p class="lead py-3">Xend is a platform that helps individuals and students send files securely over the internet.</p>
+                <p class="lead py-3">Xend is a platform that helps individuals and students save and share files securely over the internet.</p>
                 <a href="https://xend-secure.herokuapp.com/"> <button class="btn btn-primary d-inline-flex flex-row align-items-center" >
                     Get started now
                     <em class="ml-2" data-feather="arrow-right"></em>
@@ -138,7 +138,7 @@
 </section>
         <div class="row mt-5">
             <div class="col-md-8 col-12 divider top-divider mx-auto pt-5 text-center">
-                <h3>Xcloud would be rolling out soon</h3>
+                <h3>Xcloud is out now..</h3>
                 <p class="mb-4"></p>
                 <button class="btn btn-primary">
                     Create your account
