--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     </li>
                  
                     <li class="nav-item">
-                        <a class="nav-link page-scroll d-flex flex-row align-items-center text-primary" href="">
+                        <a class="nav-link page-scroll d-flex flex-row align-items-center text-primary" href="https://xcloud.up.railway.app/">
                             <em data-feather="layout" width="18" height="18" class="mr-2"></em>
                             Try Xcloud
                         </a>
