--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
             <div class="col-md-8 col-12 divider top-divider mx-auto pt-5 text-center">
                 <h3>Xcloud is out now..</h3>
                 <p class="mb-4"></p>
-                <button class="btn btn-primary">
+               <a href="https://xcloud.up.railway.app/"> <button class="btn btn-primary" > 
                     Create your account
-                </button>
+                </button> </a>
             </div>
         </div>
     </div>
